fix: fix bug with blurred background container

--- a/shop/css/header.css
+++ b/shop/css/header.css
@@ -19,9 +19,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 65%;
+    /* width: 65%;
     margin: auto;
-    padding: 2rem 0rem;
+    padding: 2rem 0rem; */
+
+    background-color: rgba(255, 255, 255, .08);
+    backdrop-filter: blur(5px);
+    width: 100%;
+    padding: 2rem 18%;
+
 }
 
 .header-divider {
@@ -149,10 +155,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 65%;
-    margin: auto;
     gap: 2rem;
-    padding-bottom: 0.4rem;
+    /* width: 65%;
+    margin: auto;
+    padding-bottom: 0.4rem; */
+
+    background-color: rgba(255, 255, 255, .08);
+    backdrop-filter: blur(5px);
+    width: 100%;
+    padding: 0 18% 0.4rem;
 }
 
 .offcanvas-btn-desktop {
