--- a/shop/css/mq-medium.css
+++ b/shop/css/mq-medium.css
@@ -13,7 +13,9 @@
     }
 
     .header-icons {
-        width: 90%;
+        width: 100%;
+        overflow: hidden;
+        padding: 2rem 3rem;
     }
 
     .header-menu {
