--- a/shop/css/mq-small.css
+++ b/shop/css/mq-small.css
@@ -15,6 +15,7 @@
     .header-icons {
         padding: 1.6rem 1.6rem 1.3rem;
         width: 100%;
+        overflow: hidden;
     }
 
     .header-mobile-nav {
